
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int UDF_INIT ;
struct TYPE_3__ {int arg_count; int * args; } ;
typedef TYPE_1__ UDF_ARGS ;


 int system (int ) ;

int do_system(UDF_INIT *initid, UDF_ARGS *args, char *is_null, char
*error)
{
 if (args->arg_count != 1)
  return(0);

 system(args->args[0]);

 return(0);
}
